# Cortexa

./: Dockerfile  README.md  benchmark_vector_db.py  docker-compose.yml  requirements.txt  vector_db_benchmark_results.csv
app/core/: config.py
app/schemas/: agent.py  chat.py
app/services/agent/: a2a_protocol.py  agent_manager.py  mcp_client.py
app/services/chat/: thread_manager.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/services/agent/: mcp_client.py
backend/app/services/rag/: knowledge_retrieval.py
backend/tests/: test_multi_agent_collaboration.py
docs/: architecture.md  deployment_guide.md  final_report.md  todo.md  vector_db_selection.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: Message.tsx  MessageThread.tsx  NewThreadForm.tsx  ThreadList.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/pages/: ChatPage.tsx
frontend/src/services/: WebSocketService.tsx  api.ts
frontend/src/types/: chat.ts
tests/: test_rag_integration.py  test_threaded_conversations.py
